Added GET-Nodes and documentation
